WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165847
[EFL] Fix debug build break since
r207192
https://bugs.webkit.org/show_bug.cgi?id=165847
Summary
[EFL] Fix debug build break since r207192
Joonghun Park
Reported
2016-12-14 07:30:12 PST
Fix debug build break like below. ../../Source/WTF/wtf/Assertions.h:283:9: error: the address of ‘WebCore::JSFetchHeaders::s_info’ will always evaluate as ‘true’ [-Werror=address] if (!(assertion)) { \ ^ ../../Source/WebCore/bindings/js/JSDOMBinding.h:357:13: note: in expansion of macro ‘ASSERT’ ASSERT(JSClass::info()); In JSDOMBinding.h, JSClass::info() returns each js class's "static const JSC::ClassInfo s_info"'s address. It's static variable's address, so always non-null.
Attachments
Add attachment
proposed patch, testcase, etc.
Joonghun Park
Comment 1
2016-12-14 07:32:22 PST
Committed
r209800
: <
http://trac.webkit.org/changeset/209800
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug