[EFL] Fix debug build break since r207192. Unreviewed. https://bugs.webkit.org/show_bug.cgi?id=165847

No new tests, no new behaviours.

In JSDOMBinding.h, JSClass::info() returns each js class's
"static const JSC::ClassInfo s_info"'s address.
It's static variable's address, so always non-null.

* bindings/js/JSDOMBinding.h:
(WebCore::BindingCaller::callPromiseOperation):
(WebCore::BindingCaller::callOperation):
(WebCore::BindingCaller::setAttribute):
(WebCore::BindingCaller::attribute):

Canonical link: https://commits.webkit.org/183446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209800 268f45cc-cd09-0410-ab3c-d52691b4dbfc